--- a/app/views/addressInfo.html
+++ b/app/views/addressInfo.html
@@ -1,6 +1,6 @@
 <div class="container" style="padding-top: 50px;">
 <h1>Address
-    <small>View information about an Ethereum Address</small>
+    <small>View information about an Wabei Address</small>
 </h1>
 
 <div id="address-97785883" class="addressdiv">
@@ -18,7 +18,7 @@
             <td>{{balance}}</a></td>
         </tr>
         <tr>
-            <td>Balance (Ether)</td>
+            <td>Balance (Wabei)</td>
             <td>{{balanceInEther}}</a></td>
         </tr>
         </tbody>
