--- a/app/views/addressInfo.html
+++ b/app/views/addressInfo.html
@@ -19,7 +19,7 @@
         </tr>
         <tr>
             <td>Balance (Wabei)</td>
-            <td>{{balanceInEther}}</a></td>
+            <td>{{balanceInWabei}}</a></td>
         </tr>
         </tbody>
     </table>
