--- a/app/views/transactionInfos.html
+++ b/app/views/transactionInfos.html
@@ -16,7 +16,7 @@
                     <br>
                 </td>
                 <td width="48px" class="" style="padding:4px;text-align:center;vertical-align:middle;">
-                    <img src="https://blockchain.info/Resources/arrow_right_green.png">  <!--TODO upload the image on the server-->
+                    <img ="arrow_right_green.png">  <!--TODO upload the image on the server-->
                 </td>
                 <td class="">
                     <a href="./#/address/{{to}}">{{to}}</a>
